--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "title": "Clean Blog",
+    "title": "毛小星-Blog",
     "name": "startbootstrap-clean-blog",
     "version": "5.0.9",
     "scripts": {
